--- a/Lab2/02_form/css/index.css
+++ b/Lab2/02_form/css/index.css
@@ -55,13 +55,6 @@ p input#gender {
     margin-right: 10px;
 }
 
-/* 单选框单独设置 */
-p input#gender {
-    width: auto;
-    height: auto;
-    margin-right: 10px;
-}
-
 /* 多选框单独设置 */
 p input#lan {
     width: auto;
@@ -84,6 +77,7 @@ textarea.message {
 	background-color: skyblue;
 	margin-top:16px;
 	margin-left:75px;
+    margin-bottom: 16px;
 	border-radius:5px;
 	font-size:18px;
 	font-family:"微软雅黑";
